--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-aqui  https://github.com/linkportal/VFP   do  VFP em 17.07.25
+aqui = Repositório em https://github.com/linkportal/VFP   do  VFP em 17.07.25
