--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<<<<<<< HEAD
-aqui do classes
-
-=======
-https://github.dev/linkportal/VFP
-
->>>>>>> 97fe32eebd323ffa8992536767a91b9f6142ccaf
-aqui = Repositório em https://github.com/linkportal/VFP   do  VFP em 17.07.25
+aqui do https://github.dev/linkportal/VFP Repositório em https://github.com/linkportal/VFP   do  VFP em 17.07.25
